// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "test/pb";
option php_namespace = "grpc_php";

package pb;

// The greeting service definition.
service Other {
// Sends a greeting
rpc SayOther (OtherRequest) returns (OtherReply) {}
}

// The request message containing the user's name.
message OtherRequest {
string name = 1;
}

// The response message containing the greetings
message OtherReply {
string message = 1;
}
